[package]
name = "paber"
version = "0.1.0"
edition = "2024"

[dependencies]
wayland-client = "0.31"
wayland-protocols-wlr = { version = "0.3.9", features = ["client"] }
nix = { version = "0.27", features = ["fs", "mman"] }
image = "0.24"
clap = { version = "4.5.53", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "blocking"] } 
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
base64 = "0.22"
anyhow = "1.0"
chrono = "0.4.42"
